workloads/ingress/apps/dev/patch-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:123456789012:certificate/DEV_ARGOCD_CERT
    external-dns.alpha.kubernetes.io/hostname: argocd.dev.ecoeco.app
spec:
  rules:
    - host: argocd.dev.ecoeco.app
