workloads/ingress/apps/dev/patch-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:123456789012:certificate/DEV_GRAFANA_CERT
    external-dns.alpha.kubernetes.io/hostname: grafana.dev.ecoeco.app
spec:
  rules:
    - host: grafana.dev.ecoeco.app
